--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <!-- css -->
         <link rel="stylesheet" href="src/style/global.css">
         <link rel="stylesheet" href="src/style/style.css">
+        <!-- fontawesome -->
+        <link rel="stylesheet" href="src/style/font-awesome.css">
         <!-- bootstrap -->
         <link rel="stylesheet" href="src/style/bootstrap.min.css">
     </head>
@@ -61,6 +63,11 @@
         </nav>
         <!-- Home Section -->
         <section class="home d-flex align-items-center">
+            <div class="effect-wrap">
+                <i class="fas fa-plus effect effect-1"></i>
+                <i class="fas fa-plus effect effect-2"></i>
+                <i class="fas fa-circle effect effect-3"></i>
+            </div>
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-7">
@@ -71,14 +78,18 @@
                             eligendi quas possimus hic modi suscipit aliquid dolorum laborum deserunt?
                             Earum nulla cum praesentium.</p>
                             <div class="home-btn">
-                                <a href="#" class="btn btn-1">zaczynajmy</a>
+                                <a href="#" class="btn" id="btn-1">zaczynajmy</a>
+                                <button type="button" class="btn gh-btn" id="btn-1">
+                                    <i class="fab fa-github"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-5 text-center">
                         <div class="home-img">
+                            <div class="circle"></div>
                             <!-- losowy obrazek atm -->
-                            <img src="src/media/img/home.svg" alt="image">
+                            <img src="src/media/img/home.png" alt="image">
                         </div>
                     </div>
                 </div>
